--- a/.github/workflows/pocket.yml
+++ b/.github/workflows/pocket.yml
@@ -10,7 +10,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - uses: Ansimorph/rss2pocket
+      - uses: Ansimorph/rss2pocket@v1
         with:
           feeds: https://www.smashingmagazine.com/feed/, https://alistapart.com/main/feed/, https://markus.oberlehner.net/blog/index.xml 
           pocket_consumer_key: ${{ secrets.CONSUMER_KEY }}
